tests/ui/typeck/issue-53712.stderr
error[E0609]: no field `0` on type `[{integer}; 5]`
  --> $DIR/issue-53712.rs:5:9
   |
LL |     arr.0;
   |         ^ unknown field
   |
help: instead of using tuple indexing, use array indexing
   |
LL -     arr.0;
LL +     arr[0];
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
