tests/ui/typeck/issue-53712.rs
// issue #53712: make the error generated by using tuple indexing on an array more specific

fn main() {
    let arr = [10, 20, 30, 40, 50];
    arr.0;
    //~^ ERROR no field `0` on type `[{integer}; 5]` [E0609]
    //~| HELP instead of using tuple indexing, use array indexing
    //~| SUGGESTION [
}
